--- a/town_hall/speakers/c05x_sorkin.html
+++ b/town_hall/speakers/c05x_sorkin.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>San Joaquin Valley Town Hall</title>
 	<link rel="shortcut icon" href="../images/favicon.ico">
-	<link rel="stylesheet" href="styles/c05x_sorkin.css">
+	<link rel="stylesheet" href="town_hall/styles/c05x_sorkin.css">
 </head>
 <body>
 	<main>
